添加了存储

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+            <!--广播机制-->
+        <activity android:name=".ui.activity.radio.RadioActive"></activity>
+        <activity android:name=".ui.activity.radio.RadioFirstActivity"></activity>
+        
+        <!--活动-->
+        <activity android:name=".ui.activity.activity.activityActivity"></activity>
+        <activity android:name=".ui.activity.activity.intent"></activity>
+        <activity android:name=".ui.activity.activity.ReceiveActivity"></activity>
+
+        <!--储存-->
+        <activity android:name=".ui.activity.storage.StorageActivity"></activity>
+        <!--文件的储存-->
+        <activity android:name=".ui.activity.storage.FileActivity"></activity>
+        <!--sharedPreferences-->
+        <activity android:name=".ui.activity.storage.SharedActivity"></activity>
+        <!--SQLite-->
+        <activity android:name=".ui.activity.storage.MySQLiteActivity"></activity>
     </application>
 
 </manifest>
