--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <!--百度地图-->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="8xHNz6c5Wsvo2ynRugMfFMPogwRfGPmg"/>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -117,6 +122,20 @@
         <!--HttpURLConnection-->
         <activity android:name=".ui.activity.network.HttpURLActivity"></activity>
 
+
+        <!--位置服务-->
+        <activity android:name=".ui.activity.location.LocationActivity"></activity>
+        <!--百度地图-->
+        <activity android:name=".ui.activity.location.MyLocationBasedServiceActivity"></activity>
+        <!--百度定位-->
+        <activity android:name=".ui.activity.location.MyPositioningActivity"></activity>
+        <activity android:name=".ui.activity.location.MyBaiduMap"></activity>
+        <!--路线-->
+        <activity android:name=".ui.activity.location.MapPathActivity"></activity>
+        <!--路线2-->
+        <activity android:name=".ui.activity.location.MapPathActivity2"></activity>
+        <!--poi搜索功能-->
+        <activity android:name=".ui.activity.location.PoiSearchActivity"></activity>
     </application>
 
 </manifest>
