--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -377,7 +377,9 @@
         <!--右边-->
         <!--聊天-->
         <activity android:name=".ui.activity.chat.ChatActivity"></activity>
-
+        <!--登录页面-->
+        <activity android:name=".ui.activity.login.LoginActivity"></activity>
+        <activity android:name=".ui.activity.login.QuitActivity"></activity>
 
     </application>
 
